Fix header on mobile

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -3486,17 +3486,21 @@ input[type=checkbox] {
 }
 @media (max-width: 1200px) {
   .header {
-    padding-top: 0px !important;
+    padding: 0px !important;
   }
 }
 
-.header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
+.header h1, .header h2 {
   color: #FFFFFF !important;
 }
+
+.header h3, .header h4, .header h5, .header h6, .header p, .header span {
+  color: #FFFFFF !important;
+}
+
 @media (max-width: 1200px) {
-  .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
-    margin-left: -50% !important;
-    margin-right: -50% !important;
+  .row {
+    margin-left: 0px !important;
   }
 }
 
