--- a/public/css/system.css
+++ b/public/css/system.css
@@ -2704,18 +2704,20 @@
 }
 @media (prefers-color-scheme: dark) and (max-width: 1200px) {
   .header {
-    padding-top: 0px !important;
+    padding: 0px !important;
   }
 }
 @media (prefers-color-scheme: dark) {
-  .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
+  .header h1, .header h2 {
+    color: #FFFFFF !important;
+  }
+  .header h3, .header h4, .header h5, .header h6, .header p, .header span {
     color: #FFFFFF !important;
   }
 }
 @media (prefers-color-scheme: dark) and (max-width: 1200px) {
-  .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
-    margin-left: -50% !important;
-    margin-right: -50% !important;
+  .row {
+    margin-left: 0px !important;
   }
 }
 @media (prefers-color-scheme: dark) {
@@ -5657,18 +5659,20 @@
 }
 @media (prefers-color-scheme: light) and (max-width: 1200px) {
   .header {
-    padding-top: 0px !important;
+    padding: 0px !important;
   }
 }
 @media (prefers-color-scheme: light) {
-  .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
+  .header h1, .header h2 {
+    color: #FFFFFF !important;
+  }
+  .header h3, .header h4, .header h5, .header h6, .header p, .header span {
     color: #FFFFFF !important;
   }
 }
 @media (prefers-color-scheme: light) and (max-width: 1200px) {
-  .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
-    margin-left: -50% !important;
-    margin-right: -50% !important;
+  .row {
+    margin-left: 0px !important;
   }
 }
 @media (prefers-color-scheme: light) {
